# web-scraping-rust

./: Cargo.toml  README.md
src/: fetcher.rs  lib.rs  main.rs  parser.rs
