[package]
name = "web-scraping-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
charts-rs = "0.3.8"
reqwest = "0.12.4"
scraper = "0.19.0"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
